# abstract-account-wallet

./: .gitignore  .gitmodules  README.md  docker-compose.yml  hardhat.config.ts  hardhat.config.tsdd  package-lock.json  package.json
AA-Bunduler/: .gitignore  Cargo.toml  README.md
AA-Bunduler/crates/contracts/: Cargo.toml  README.md  build.rs
AA-Bunduler/crates/contracts/account-abstraction/cache/: solidity-files-cache.json
AA-Bunduler/crates/contracts/src/: entry_point.rs  error.rs  executor_tracer.rs  gen.rs  lib.rs  tracer.rs  utils.rs
AA-Bunduler/crates/primitives/: Cargo.toml
AA-Bunduler/crates/primitives/src/: bundler.rs  chain.rs  constants.rs  lib.rs  mempool.rs  p2p.rs  reputation.rs  simulation.rs  wallet.rs
AA-Bunduler/crates/primitives/src/user_operation/: mod.rs
bitriel-wallet-sdk/: .env.example  .gitignore  LICENSE  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
bitriel-wallet-sdk/src/: index.ts
bitriel-wallet-sdk/src/sdk/: dataUtils.ts  index.ts  interfaces.ts  sdk.ts
bitriel-wallet-sdk/src/test/: 01-get-address.ts  02-transfer-funds.ts
contracts/: .env.example  .gitignore  Account.sol  AccountFactory.sol  Paymaster.sol  foundry.toml  remappings.txt
contracts/script/: WalletFactory.s.sol
contracts/src/: README.md  Wallet.sol  WalletFactory.sol
relayer-node/: centrifugo_config_example.json  config.yml  docker-compose.yaml
relayer-node/config/: config-example.json  index.ts  static-config.json
scripts/: 01.deploy-EntryPoint.ts  01.deploy.ts  02.depoly-account-factory.ts  02.excecute.ts  03.excecute.ts  03_test_Sig.ts  06.storage.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/constants/: index.ts  network.ts
sdk/src/errorHandler/: errorHandler.service.ts  errorMsg.ts  index.ts
sdk/src/sdk/: index.ts
sdk/src/wallet/: index.ts  interfaces.ts
sdk/tests/: index.ts
smart-account/: .env.example  .gitignore  LICENSE  hardhat.config.ts  package-lock.json  package.json  tsconfig.json  walletUtils.js
smart-account/contracts/: BaseSmartAccount.sol  Proxy.sol  SmartAccount.sol
smart-account/contracts/base/: Executor.sol  FallbackManager.sol  ModuleManager.sol
smart-account/contracts/common/: Enum.sol  Errors.sol  ReentrancyGuard.sol  SecuredTokenTransfer.sol  SelfAuthorized.sol  SignatureDecoder.sol  Stakeable.sol
smart-account/contracts/deployer/: Create3.sol  Deployer.sol
smart-account/contracts/estimation/: SmartAccountNoAuth.sol
smart-account/contracts/factory/: SmartAccountFactory.sol
smart-account/contracts/handler/: DefaultCallbackHandler.sol
smart-account/contracts/helpers/: MultiSend.sol
smart-account/contracts/interfaces/: IAuthorizationModule.sol  IBitrielPaymaster.sol  IBitrielWallet.sol  (+6 more)
smart-account/scripts/: config.ts  deploy.ts  get_gas_price.ts  test-deploy.ts
smart-contract-wallet/: package-lock.json
test/: 01_test_excetue.ts
wallet-contract/: LICENSE  hardhat.config.ts  package-lock.json  package.json  txtt
wallet-contract/contracts/: Account.sol  AccountFactory.sol  CustomSlotInitializable.sol  LightAccount.sol  LightAccountFactory.sol
wallet-contract/scripts/: 01.deploy.ts  02.deposit.ts  02.excecute.ts  03.excecute.ts  04_test_Sig.ts  05.sendTransation.ts  06.storage.ts  run.ts
wallet-contract/test/: 01_test_excetue.ts
wallet-sdk/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.settings.json
(+249 files in other folders)
