[workspace]
members = [
    "crates/primitives",
    "crates/contracts"
]

resolver = "2"
# default-members = ["bin/"]

[workspace.package]
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "modular and efficient account abstraction (ERC-4337) bundler implement in rust"

[profile.debug-fast]
inherits = "release"
debug = true

[workspace.dependencies]
# async
async-stream = "0.3.5"
async-trait = "0.1.76"
futures = "0.3.30"
futures-util = "0.3.30"

# tokio
tokio = { version = "1.35", features = ["full"] }

# misc
expanded-pathbuf = "0.1.2"
eyre = "0.6.11"
jsonrpsee = { version = "0.21.0", features = ["server", "macros", "client"] }
metrics = "0.22.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.109"
thiserror = "1.0.53"
tracing = "0.1.40"

# eth
alloy-chains = "0.1.14"
discv5 = { version = "0.4.0", features = ["libp2p"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", features = [ "ws"]}
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs.git", rev = "8640128ec83071094d24fb4511147d6b9dd029bb" }
ssz_rs_derive = { git = "https://github.com/ralexstokes/ssz-rs.git", rev = "8640128ec83071094d24fb4511147d6b9dd029bb" }

# workspace crates
selendra-primitives = { path = "crates/primitives", default-features = false }

[patch]
[patch.crates-io]
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "3d8ca6641d2e72448c23f4596f769c8fd1c784d1" }

[patch."https://github.com/gakonst/ethers-rs"]
ethers = { git = "https://github.com/Vid201/ethers-rs", branch = "chore/ws" }