[package]
name = "selendra-contracts"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Account abstraction (ERC-4337) smart contract interfaces"

[dependencies]
# workspace dependencies
selendra-primitives = { workspace = true }

# eth
ethers = { workspace = true }

# misc
eyre = { workspace = true }
lazy_static = { workspace = true }
regex = "1.10.2"
serde = { workspace = true }
serde_json ={ workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# tokio
tokio = { workspace = true }

[build-dependencies]
# eth
ethers = { workspace = true, features = ["solc-full"] }
ethers-solc = "2.0.8"

# misc
eyre = { workspace = true }